--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "DARK_NERO",
+  "name": "RAVANA_MD_BOT",
   "description": "A Whatsapp md bot built in NodeJs to make experience better",
   "logo": "https://i.ibb.co/zrvByTb/IMG-20230609-WA0083.jpg",
   "keywords": ["nodejs", "bot", "whatsapp bot", "dark-nero", "huttto", "cyber_yakuza","nimesh","pahan","multi device","baileys","kaveesha"],
@@ -38,7 +38,7 @@
 
    "OWENR_NO": {
     "description": "The phone numbers",
-       "value": "94786802371"
+       "value": "94776312185"
   },	
    
 
